--- a/workspace/github/my-first-react-app/first-app/src/App.css
+++ b/workspace/github/my-first-react-app/first-app/src/App.css
@@ -1,38 +1,69 @@
 .App {
+  display: block;
+  color: #f00;
+}
+
+body {
+	width: 50rem;
+	border: 2px solid #088;
+	margin: 1rem auto;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.player-card {
+	width: 12.5rem;
+	height: 12.5rem;
+	margin: 1.25rem;
+	border-radius: 50%;
+	background-color: #ddd;
+	text-align: center;
+	line-height: 12.5rem;
+	position: relative;
+	display: inline-block;
+	border: 2px solid #fff;
+	opacity: 1;
+	background-repeat:no-repeat;
+	background-position: center center;
+}
+
+.player-card:nth-child(2) {
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+	filter: FlipH;
+	-ms-filter: "FlipH";
+}
+
+button {
+	width: 25rem;
+	border: 2px solid #fff;
+	margin: 1.25rem auto;
+	cursor: pointer;
+	display: block;
+	outline: none;
+	padding: 1rem;
+}
+
+button:hover {
+	background-color: #0cc;
+	transition : all 200ms ease-out;
+}
+
+p {
+	text-align: center;
+	min-height: 3.75rem;
+}
+
+p, button {
+	font-size: 1.25rem;
+}
+
+a {
+  display: block;
+  font-weight: bold;
+  margin: 1rem auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
